Opened 14 years ago
Closed 12 years ago
#7734 closed bug (fixed)
Fading in toolbar in full screen mode kills toolbar in window mode
Reported by: | humdinger | Owned by: | leavengood |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/ShowImage | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev42282.
Do this:
- Open an image in ShowImage
- Make sure the toolbar is showing
- Enter full screen mode with ALT+ENTER
- Move the mouse to fade in the toolbar
- Wait until the toolbar disappears again and switch back to window mode with ALT+ENTER (if you switch while the toolbar is still showing, everything works as expected)
-> Now in window mode, the toolbar is gone and instead the 32(?) lines of the image are repeated:
Attachments (4)
Change History (14)
by , 14 years ago
Attachment: | ShowImage_toolbar-bug.png added |
---|
comment:2 by , 13 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
I can still reproduce it in hrev44434 with the following steps:
- Open an image in ShowImage
- Enter full screen mode with double click
- Make sure the toolbar is showing
- Move the mouse to fade in the toolbar
- When the toolbar starts disappearing switch back to window mode with double click
by , 13 years ago
Attachment: | showimage.png added |
---|
comment:3 by , 13 years ago
With some effort (including making VirtualBox really slow) I was able to reproduce diver's latest version of this, but it is pretty hard to do, so I may put this bug in my low priority list. Eventually some sort of class could be added to manage the state and animating of the toolbar button, and maybe that could help avoid these issues (which really are just a form of race condition.)
by , 13 years ago
Attachment: | softshapeart_sw_1600x1200.jpg added |
---|
comment:5 by , 13 years ago
The other way to reproduce it is just to open this image in window mode and hold Atl+T for several seconds.
by , 12 years ago
Attachment: | 0001-Fix7734.-Avoid-race-conditions-in-ToolBar-animation.patch added |
---|
comment:6 by , 12 years ago
patch: | 0 → 1 |
---|
comment:8 by , 12 years ago
Still a small race condition in transition from fullscreen to window (toolbar hidden). This is very hard to fix.
comment:9 by , 12 years ago
Applied in hrev45249, thanks a lot! Not sure if it's worth to keep this bug open -- opinions?
comment:10 by , 12 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
Can't reproduce anymore, closing. Thanks!
Toolbar destroyed after full screen mode