When the toolbar is hidden by animation it is moved, and so we need to move it back when showing it again but not using animation.

Fixes #7734.


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42306 a95241bf-73f2-0310-859d-f6bbb57e9c96